<resources>
    <string name="app_name">Expense Mate</string>
    <string name="hamburger_icon">Menu Hamburger icon</string>
    <string name="groups_page_title">Groups</string>
    <string name="settle_up_settle_up">Settle up</string>
    <string name="settle_up_amount">Amount</string>
    <string name="settle_up_to">To</string>
    <string name="settle_up_from">From</string>
    <string name="list_item_group_participant_settled">Settled!</string>
    <string name="list_item_group_participant_settle">Settle</string>
    <string name="border_content_description">A border</string>
    <string name="expenses_balance_widget_label">Balance</string>
    <string name="expenses_balance_widget_add_expense">Add expense</string>
    <string name="expenses_balance_widget_settle_up">Settle up</string>
    <string name="expenses_expenses">Expenses</string>
    <string name="expenses_no_expenses_yet">No expenses yet.</string>
    <string name="balances_participants">Participants</string>
    <string name="balances_settles">Settles</string>
    <string name="balances_no_settles_yet">No settles yet.</string>
    <string name="registration_create_account">Create account</string>
    <string name="input_hint_password">Password</string>
    <string name="input_hint_email">Email</string>
    <string name="login_welcome">Welcome!</string>
    <string name="title_login_below_or">Login below or </string>
    <string name="login_create_an_account"> create an account</string>
    <string name="login_sign_in">Sign In</string>
    <string name="groups_create_group">Create group +</string>
    <string name="expense_no_expenses_yet">No expenses yet.</string>
    <string name="expense_participants">Participants:</string>
    <string name="create_group_add_group_participant">Add group participant +</string>
    <string name="create_group_participants">Participants</string>
    <string name="create_group_hint_group_name">Group name</string>
    <string name="create_group_create_group">Create group +</string>
    <string name="add_expense_payer">Payer</string>
    <string name="add_expense_description">Description</string>
    <string name="add_expense_amount">Amount</string>
    <string name="add_expense_save">Save</string>
</resources>