<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.appbar.AppBarLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@android:color/white"
    tools:context=".Activity.SettleUpActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIconTint="@android:color/white"
        app:title="@string/settle_up_settle_up"
        app:titleTextColor="@android:color/white"
        android:background="@color/colorPrimary"
        />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/spacing_4"
        android:paddingVertical="@dimen/spacing_2"
        android:orientation="vertical"
        >

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settle_up_from"
            android:layout_marginTop="@dimen/spacing_3"
            android:layout_marginBottom="@dimen/spacing_2"
            android:textColor="@color/colorPrimary"
            />

        <Spinner
            android:id="@+id/fromSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_4"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settle_up_to"
            android:layout_marginTop="@dimen/spacing_3"
            android:layout_marginBottom="@dimen/spacing_2"
            android:textColor="@color/colorPrimary"
            />

        <Spinner
            android:id="@+id/toSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_4"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settle_up_amount"/>

        <EditText
            android:id="@+id/amountEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:layout_marginBottom="@dimen/spacing_4"
            android:drawableEnd="@drawable/ic_dollar"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addSettleUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settle_up_settle_up"
            android:backgroundTint="@color/colorPrimary"
            app:cornerRadius="@dimen/button_corner_radius"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>

</com.google.android.material.appbar.AppBarLayout>
