<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.circularreveal.CircularRevealRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Activity.RegistrationActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIconTint="@android:color/white"
        app:title="Register"
        app:titleTextColor="@android:color/white"
        android:background="@color/colorPrimary"
        />

    <!-- Linear Layout with vertical orientation and other properties -->
    <com.google.android.material.circularreveal.CircularRevealLinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="@dimen/spacing_6"
        >

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Create your account!"
            android:textSize="@dimen/login_title_text_size"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_6"
            app:hintEnabled="true"
            android:hint="@string/input_hint_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:padding="@dimen/spacing_3" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_4"
            app:endIconMode="password_toggle"
            android:hint="@string/input_hint_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:padding="@dimen/spacing_3" />
        </com.google.android.material.textfield.TextInputLayout>

    </com.google.android.material.circularreveal.CircularRevealLinearLayout>

    <!-- Sign In button at the bottom -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registration_create_account"
        android:layout_alignParentBottom="true"
        app:cornerRadius="@dimen/button_corner_radius"
        android:padding="@dimen/spacing_3"
        android:layout_margin="@dimen/spacing_4"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@android:color/white" />

    <!-- ProgressBar for loading time -->
    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</com.google.android.material.circularreveal.CircularRevealRelativeLayout>
